version/0.6/_sources/examples/run_python_script/07_simple_calculator.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/07_simple_calculator.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_07_simple_calculator.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_07_simple_calculator.py:


.. _ref_simple_calculator:

Simple calculator
-----------------

This example demonstrates how to create a simple calculator flow.

It uses the ``simple_calculator.py`` file to create and run
a simple flow of four nodes. It then explains how you can optionally
save the project to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 37-40

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: Python

    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 44-47

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 47-51

.. code-block:: Python


    osl = Optislang(ini_timeout=60)
    paths = examples.get_files("simple_calculator")


.. GENERATED FROM PYTHON SOURCE LINES 52-56

Get path of example script and run it
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the path of the example script and then run this
script.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    osl.application.project.run_python_file(paths[0])


.. GENERATED FROM PYTHON SOURCE LINES 60-63

Run workflow
~~~~~~~~~~~~
Run the workflow created by the preceding script.

.. GENERATED FROM PYTHON SOURCE LINES 63-66

.. code-block:: Python


    osl.application.project.start()


.. GENERATED FROM PYTHON SOURCE LINES 67-77

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired
location, uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.application.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 79-82

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 82-85

.. code-block:: Python


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 86-94

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/07_simple_calculator.png
 :width: 400
 :alt: Result of script.



.. _sphx_glr_download_examples_run_python_script_07_simple_calculator.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 07_simple_calculator.ipynb <07_simple_calculator.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 07_simple_calculator.py <07_simple_calculator.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
